--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^4.1.1",
     "react-router-dom": "^7.11.0",
